workspace/DevP360/src/objects/Performance_Metric__c.object
<CustomObject>
    <description>This object holds DSRIP Performance Metrics for the patient (one row per patient per measure)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Performance Metrics</relationshipLabel>
        <relationshipName>Performance_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Reason__c</fullName>
        <description>e.g., &quot;Patient was hospitalized with a short-term complication of diabetes&quot;, etc.</description>
        <label>Assignment Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measure_Name__c</fullName>
        <description>Name/Description of the DSRIP Measure</description>
        <label>Measure Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measure_Priority__c</fullName>
        <description>e.g., this measure is an EPP measure, etc.</description>
        <label>Measure Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Category__c</fullName>
        <description>e.g., &quot;In Numerator&quot;, &quot;Not In Numerator&quot;, etc.</description>
        <label>Performance Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Performance Metric</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Performance Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>